# cppdb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: FindMYSQL.cmake  FindMySQL.cmake
cppdb/: backend.hpp  conn_manager.hpp  connection_specific.hpp  defs.h  driver_manager.hpp  errors.hpp  frontend.hpp  logging.hpp  mutex.hpp  numeric_util.hpp  pool.hpp  ref_ptr.hpp  shared_object.hpp  utils.hpp
cppdb/drivers/: mysql_backend.hpp  odbc_backend.hpp  postgres_backend.hpp  sqlite3_backend.hpp
docs/: backenddev.txt  changelog.txt  connstr.txt
drivers/: mysql_backend.cpp  odbc_backend.cpp  postgres_backend.cpp  sqlite3_backend.cpp
examples/: example1.cpp  example1mysql.cpp  examplelogging.cpp
src/: atomic_counter.cpp  backend.cpp  conn_manager.cpp  driver_manager.cpp  frontend.cpp  mutex.cpp  pool.cpp  shared_object.cpp  utils.cpp
test/: dummy_driver.h  dummy_driver.hpp  run_test_linux_a.sh  run_test_linux_b.sh  test.h  test.hpp  test_backend.cpp  test_basic.cpp  test_caching.cpp  test_perf.cpp
